# rithmic-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: .env.blank  connect.rs
rapi/0.78.0.0/: Release.Notes
rapi/0.78.0.0/proto/: change_log  exchange_order_notification.proto  otps_proto_pool.proto  request_bracket_order.proto  request_new_order.proto  response_account_list.proto
rapi/0.78.0.0/samples/samples.py/: SampleBar.py  SampleMD.py  SampleOrder.py
src/: api.rs  connection_info.rs  lib.rs  plants.rs  request_handler.rs  rti.rs  system_check.rs  ws.rs
src/api/: receiver_api.rs  rithmic_command_types.rs  sender_api.rs
src/plants/: history_plant.rs  order_plant.rs  pnl_plant.rs  ticker_plant.rs
src/raw-proto/: otps_proto_pool.proto  request_modify_order.proto  request_oco_order.proto  rithmic_order_notification.proto
src/rti/: messages.rs
