[package]
name = "rithmic-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
dotenv = "0.15.0"
futures-util = "0.3.28"
prost = "0.12.3"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.4.1"

[build-dependencies]
prost-build = "0.12.1"
